[package]
name = "simple-pipeline"
version = "0.1.0"
repository = "https://github.com/atolab/janu-flow-examples"
homepage = "http://janu.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes","unstable"] }
janu-flow = { git = "https://github.com/virtuehive/janu-flow.git", branch = "main" }
janu = { git = "https://github.com/virtuehive/janu.git", branch = "main" }
janu-flow-example-types = { path = "../janu-flow-example-types" }
serde = { version = "1.0.55", features = ["derive"] }
typetag = "0.1"
bincode = "1"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
async-trait = "0.1.50"
futures = "0.3.5"
rand = "0.8.0"
uhlc = "0.4"
env_logger = "0.9"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }