[package]
name = "sum-and-send"
version = "0.1.0"
repository = "https://github.com/atolab/janu-flow-examples"
homepage = "http://janu.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
janu-flow = { git = "https://github.com/virtuehive/janu-flow.git", branch = "main" }
janu-flow-example-types = { path = "../janu-flow-example-types" }

[lib]
name = "sum_and_send"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.januflow]
id = "sum-and-send"
kind = "operator"
inputs=[ {id ="Number", type="int"}]
outputs=[ {id ="Sum", type="int"}]

